--- a/Dashboard.resx
+++ b/Dashboard.resx
@@ -117,4 +117,212 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox11.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAA+VJREFUeF7t
+        nOtV20AUhF1CfvrxRyWkA7uDpAOnA9IBdBA6gA6SDkIHpAPTQeiAzJgrIkvXeu1Dwsx3zhxhI4M9492r
+        XUm7EEIIIYQQQggxD5bLZQFdQ3t7SkwFQthBLxX9hgr7tcgNzL+vhHHUarX6C13ZLiInCOChHkhFai25
+        geFtgZS6tt1FamB2n0DYjT1uNpvP9jKRCpjdK5BSCOZHURSf7OUiNjB5UCCmw3q9/mp/QsQE5o4J5Ci0
+        lp/YqujHBIaODoTSIXJkYGpQIKVU9CMBM6MEUkpFPxCYGDUQ0/so+nijnMTbdmgPcaLvrPgtxJaj6C4d
+        IM+wXOJ76F/02bTwghNDkOwXbF0joDuo/qGr8t7UhxaLPrbnR/oWgszLL7bWncXwHzypMKbV3VvRxwP2
+        4d5OUkaxGzseIuNB/WSMNJEQyi8FMi/dq8uaidA6/mD7ejiMHxqnLKVsekYY349BlLDCs/9ydpYSyjzv
+        HiTauIS1pSEO/7G9aRP+0S22nH7olDVV9w1fsJ6g5vjjvcIPM1TsFrB1v0COaJhnZAzdvI05RD9gGluv
+        Z2aI+Dd14moMZp5n6hg969RuIDAxSiCspeqeIgAzgwLhgYrOFEYEpo4NpDmmEOHA2MGBIIh+YwoxHBg7
+        JJAnFe3EwORegahoZwJmtwaiop0ZmN4WyI3tJnLBrqgehFrFhCAAniMq57OeIbWKOYAgdiraQgghhBBC
+        CBERu7xoaw/FlCAI3uXEG1U4HXHQCHgiOCGHIB4tiKo0P5QbmM5b3upBlHqw3URqYDavFPRaRVUKJDWs
+        CwiCd8N6AdSlQFJiF2EPueVYgaQAxhZoFVxwxTO9TQokNgjiCioPZYdKgcQCZvYp2l1SIKEMLNpdUiAh
+        wMB9QPfkSYGMAcbxCowUKz0okCHYRGDbSDtUPESuLmLTKlsA52RRnB66jIufR4wpLkLWJZerGHWJqyC5
+        X56KuKyU90XZ9ppcxY5jxxRSgOh5IyD8ojo9LmUWvL8tg2CrCB1TSHFUMBAtqzEf7Tj9oSU15qPd8Ywe
+        fuAV3t4OUl69HqbblEjjnggpq5oDZTzJScOPuBjMpGLZaB2XYCcuwKJurCnexMPb3VxZL1NfyKZUY0Gc
+        XoPDEryAc1j8R94byyJrrY0P7sgz4EQ2+9AwpapBBk2FfZAUyxVpcnEsiYq+AgnFLnqLVfQVSCwQCldn
+        Cy36CiQmMJRzYCGjfAWSgoCir0BSMbLoK5DUDCz6CiQXMJuDMS+EqhRITmB410hfgUzBuUNk1hzbReQG
+        AXit5XKW2n6vIIRvEOuLFosUQgghhBBCiFmwWPwDZPVuXJcAL1kAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox10.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABAZJREFUeF7t
+        mu912jAUxRmhH/nzxSNkg7JBO0I2SDdIRsgGYYRuQDZoNygbhA3aeznPqRGSLYMtC/n+zrmHBJ705Hct
+        WTYshBBCCCGEEEIIIYQQQgghhBBCCCGEGI7lcvkO/ZVG0buVOR42cjqRhpMMyUwyJDPJkMwkQzLT+Ias
+        VqvfeN3OUXbs3roElMSQV2s6O3D8O7ceHUqyZG2t6ezgsTu16NLohvRPUBisgVOTNo1nCNfPqqq+WLPZ
+        whr0uJaMYwivGzLjP2bKq69WjgY1hBew7dRGMP96vf6GsTw3xfdyGBtrBIUu9oMa8mIhk4D8FfSGM/Gj
+        MaYz2WdvUGXNJgH5X+oxOSrDEOTmLPCNqU3P1jw5yF2mIbYE7J1x9NF+imUMecs0BEvQL884eol9WHfJ
+        QN7yDInctUSJfVm3SUDOsgzBjum7J7+rA8SxUvzbF/Mp9mndjw7ylWUIcv1xcjd1hC4e1/A9+8zXJunS
+        hXzlGII8wedDKGrr0wHbBLTNliTP3ZAnT0PQhvcOX/lqb3WCov+0fBfabDYPFhaEMb62FPu2sE4Q33vs
+        NWiTlyFWlLPtKpeMmIIiLnTjt7OQThjrtD2JfVtIEI6RY3Xa7mPGXoP4fAxBXNVS1Naz3Izs3c4F8cFl
+        79r8dkxRswVx+RiCgQeXHIpnn4VegM9DhTxaSDSePmoFryOemeEqapYiLqsZ4mvrynum4f3BDoRtnD5q
+        eY8D7/Oa4Ys/k4W3gri7M8R7luL9KQ0JLnNNWXgriCtjhmDJ+OGJpQYzhDks5Ax8FjNDopZOxGVlSNcX
+        /8FB4bPgWWoh0fj6MAWvIfgsdOy17u8awpsznIWhrzSP1+5y+jz6aHv0EpHfe7fPY4p9coz4fAwhdsfM
+        mdI8OP7fuW102nwKBYm+qWOsrw/oYCFBEMNte7M9x7OLNYMgPi9DbgF52pa8zkcfjHHaNBV9c3kLyFOU
+        IcGC4sz96FpyGONra5r3s6xrQa7QGE6mQE/NJcSuW08dZvQvxpUgV3GGRN0TQHxeFvUVb9vMGhrkK8sQ
+        wnxO/luUy9jv1xCCnF33NDFKciFvgpxlGkKQ9xZTkptBkLdcQwhyP0LBr2c9YuyjNU8OcpdtCLGdFH+J
+        0vYV7YExfW7ixgDjSGLInltLvPb+SnNo7BEHd2I8cGqbchcVgrWxGoV2foMa0tQkvwjMFdaCNXFq5NNo
+        hpxu0PA6+WyZGtbAauGtk6PxDKEwkOQ/08wN1sBXm4DGNYRK+YvA3Ij8hWVT4xsCTbLXzwEeu1OLLo1v
+        iE1Z/qBsduq5XFFJZogULxmSmWRIZpIhmUmGZCYZkpn6GyKEEEIIIYQQQgghhBBCCCGEEEIIIYQQQtw/
+        i8U/DTGLpVx0dg0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox12.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAV/SURBVHhe7Z1Na5xlFIb7A/xCXCSTzBhiMJKNWnFhQYsI
+        arUorkR/gfgbXAtaN4IUXRTpWkQU/NiJIrZCF/UjCAriQnGhFb+34/1M7sAzZ85M7vOGzPPSngsukjnv
+        c87c855k2mTRHhuPx2mPdItpO91i2k63mLbTLabtdItpO91i2k63mLbTLabtdItpO91i2k63mLbTLabt
+        dItpO4+E1dXVB1ZWVt6EX+LzK/g4vlrE6/kPvrW2tnaaL7e/DAaDJxD6a/sirlaxmE9Ho9EmX35/2N7e
+        vh4B37WBrwX5HfMcb0V7Njc3b0Sg77yw15J4dzjLW9IWhHnPhitiSR8i5NNwxKNLxcsUkWNmwOt5GNfd
+        1wyf57E2INwzTqiv4AaPNMNkCssxc8FrfxLn/rV9rb4AJzhvVbsbGxs38XJTTK6wHLMQ/E3rPpydWgru
+        yXleXi548lN1ENr8O2MfJ1tIjjkQfEc8a3ubfFHiic/VIRCsH3+okTpbFzlGAt8Vl+ve8lbOS8sDTzz1
+        8wZCnOClXlBn6yLHSGAhL9S9ePw6Ly0PPOnUT+Dr6+s381IvqLN1kWMkcP4x0/8+Ly0PEyD0ApaBzReV
+        YyTwxXm87sXjS7y0POoARZZ7g80XlWMk8Letu+peLOQyLy2POkCR5d5g80XlGIlciIDNF5VjJHIhAjZf
+        VI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5Vj
+        JHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlc
+        iIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg
+        80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxR
+        OUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6R
+        yIUI2HxROUYiFyJg80XlGIkjXwiGnsTQV+ElfP5n/WTzZGtv8DJG5BgJu5B54n7+jo8X4Ev4/B62zwcH
+        d7gEd+AiOaI3eBkjcoyEuhAr7vVHg8FgyDHT4MLdOPSHbVLlmN7gZYzIMRJdF0J/wb2/g6P2wKZuhb86
+        h2U5qjd4GSNyjMQhF1L8eTgcDjhuspDPnEO7eKIHeWQGe57l3mDzReUYCW8hvDQD7vVTuP6DPV/evvYP
+        PGIv4lvozOTiAmwPy73B5ovKMRKRheyD+/6G7YEnZy7g8QfsWUjdU2S5N9h8UTlGostCCjj3sel7rSzk
+        27qIx/fz/ELqniLLvcHmi8oxEl0Xgr6HTN83JfjfdXFnZ+c6nl9I3VNkuTfYfFE5RqLrQra2tm4wfX+V
+        4P/URZ49kLon0rcsbL6oHCPRdSHlHw6te/DudKUEn/oTH8XjPL+QuqfIcm+w+aJyjETXheBeP2r6LpTi
+        +bqIx+/w/ELqniLLvcHmi8oxEodYyCd1Dx6/WIY9Xhfpy+yZi+1huTfYfFE5RsIuBDf2wF8u4keLs3UP
+        +/benfDgc3sR7sJTkwMO5mwupOpdtBCcPY0z39fn2fM2j0y2NULhN3soXZo/Yge3cB17YHN3YimH+n1W
+        Ghf3/KfhcHgb1zANlnI7Dl20TenRiGWUX78f/B/A4NAJ+AqavoCdfyWfzlju5UXc2zP4eC9v9zTef26Y
+        ttMtpu10i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpq0cH/sfwA9/PtsN
+        hYgAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox13.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABR5JREFUeF7t
+        nU1r3FUYxecD+Ia4SCaZGGIwko0acWFBiwhqtSiuRD+B+BlcC75sBCm6KNK1iCio3YkiVqGL+hIEBXGh
+        uNCK79t4bnoCd578Z3Kef9KZa3t+cJrOvfc5c+Z/ZobJLNqBMcYYY4wxxhhjjDHGmCuV4XB4DHp5YWHh
+        c+h3aMc6EpVr+Rmu7Uv4eTcv92SWlpZuLQMcti6zFhcXz6KcFV7+cVDG7TjwS9egdfmEa/7jaDS6hTVc
+        orSEjV+7BqyZ6Ad0cBPrGAyw8Gk4ULQNneCRfYSzO1xuhpgvK9pI4N3ljnoWT+4L3NoHzp7Eme/q85x5
+        a+/Ao3ETenF3cwpxhsvNEPNlRRuJTCF74BVxqp7h3NYAf5wJi29zZir1TBGXmyHmy4o2ErEQdR7X+qN6
+        BrefL8G/D4tbPD+VeqaIy80Q82VFG4lDFPJwmDtXgv9dL/LsgdQzmblZEfNlRRuJvoUsLy/fWM+goIsl
+        +F/14ubm5jU8P5V6pojLzRDzZUUbib6FrK+vXxfm/iwvm2/qRdy+l+enUs8UcbkZYr6saCPRtxDMPRDm
+        vi6FvF4v4vb7PD+VeqaIy80Q82VFG4m+heDch2Hu1VLIQ2Fxp3zXwpmJxBkuN0PMlxVtJPoUEl8I1PG9
+        zU86NrdxR/fvHuggnudyM8R8WdFGIlMIrvUT2B/7ZFuE9bM8snvoZuhQ32PRqhm6MmZEG4muQpL6aTQa
+        DWl3CbxN3YmN3l+106YZujJmRBuJQxbyM679bbQaB5ubeKWcDwOSaNEMXRkzoo1E30LK2xTKGNFmMjh8
+        HIdfYTl/1CaTxNFm6MqYEW0k1EJwPX/Dz3PQC/j7XRw/Guo7KuJyM8R8WdFGIhaCi33gl4tHTh2giMvN
+        EPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VF
+        GwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRci
+        EPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VF
+        GwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRci
+        EPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRciEPNlRRsJFyIQ82VF
+        GwkXIhDzZUUbCRciEPNlRRsJFyIQ82VFGwkXIhDzZUUbCRSwVc/i9nluzQ7c6cU6RPkHHbnVBHW2PqKN
+        BM4/Eubf49bswJ1+VYcYDofHuNUEdbY+oo0EnpzP1bO4/Rq3Zgfu+HQdAoWc4lYT1Nn6iDYSKOBCPYtr
+        8RS3Zgfu+EQdglrl9tzpyJYSbQ4EF//pOLu6unoDt2cLnhnfhjDbcwsTCLnSos1U8OnqHpz9p57DNTnD
+        7dlTXpp1GOpLaO6vlJApLdpMBI/9cZwbK6MI693/QcusQIh3Y6giPFM+QLgn5xWwK1NGtNkHHs+D2O98
+        zNCzPDY/1tbWru9467rqhKLa+VCzsbFxLUK9E0NeDcKT8V/oGV6KtsCz5DGEHPv95EoWivh4ZWVljQ+/
+        XRD0PgR+A/oCfx/7jf7/Lr4i3sQnrJN8uMYYY4wxxhhjjDHGGGPMGIPBfywBzh8TkFlqAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
+  <data name="pictureBox8.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABslJREFUeF7t
+        XO1x3DgMdQn30x9/toTrICnhOrA7SDqwO7jrwO7g0kHcQdKB3cG5g9yDBmKWFCSRBERqd/Fm3nhEQSRE
+        kABIynvlcDgcDofD4XA4HA6Hw2GD6+vrT+Aj+H3kzc3Nf8TD4fAHizm2AnUyOvsLd/6vFT7xYw5rkCHQ
+        wY808pNOX+IbP+6wBM8IqcNz+MjVOLRg9/Sv0Mm1JDd377GlAuyi3o4604zs9h64KccaeGb8SDvSmmjj
+        b27SsQR0Vk4GZUXPxJaAUftV6LRNeXt7+xc37zgGu6qStNaKl5Uec4C+B5/BcUX96+7u7k8WGYCyJyrv
+        xCjI4/pAMQZ/g75H/MxipwUofr8QnN9ZLKDT7BhIerIaA3gQibLgC4udBsgnQ+m1lDV6KX5GkmvJA6sz
+        AEb6KciMjGR3CR5V5JakF4iYBlK8/D+SXGNGbmtNJ5pVIC1c7/mR/aBi7RD5YVy/JvebkwzA6gwonLVv
+        aUzshgpjEFP30C1+HPGV1RmA68/J/UXSO+zCKFAmy00dkx8NkGQ6UGUQIhmFBihX0R5QolhpIj8eIMn0
+        IKszANeH9H4m+2VhFa5qID8eIMn0IKsTIMlksn0WRv5SUCSLXEWAJNOB0dpI835g+91kzA5NqhplWahr
+        KedvRXUMGYn3+cbVtEOtuyIK65BvklxjRr4f19UGAdvvjwlKZJNmF1czANfNd3lTkg6szgCUqfbWuJp2
+        kJTIJc0urmYAymozGktGgRjXqsVq8/RXUqKEXE0Ayrqt1sllshoBklwJmy8SJSVyKXUAyiw/aCgi2p4c
+        56L8PZUrIVfTDmhUo3B6/vCQ3O/BNPNTbXhyNe1Ao1xSJJO731zEtSbRiFLoJkCj1aM6DXgo2+STn0Ka
+        rUPA9h9PUKcKimRRMIjKXxvRah3y0WWDUXnKt0eXZbYOSRe+TYAXqF6pg9GUVvprE6ZpKso0g6RLDJEU
+        ySIMEKW9KOu6MIQ+P1mVAJSpDs24mnZAoyq/L8SRnp8BpS5Um4a3nyE0ygVFSjjJRFBGHdEswNPMkPw9
+        7qk+Z0W9UQrdBGhYNYrYJUwOclDWcpEYzQyCMlkZOam3CWiECcpkE8//SF2X8mCoiNxkALXNA0WUz2R7
+        dzWC1yIq309G4eoCUP6Rym3AdCFIn49qjfHUZQ1yDIsRLaScL6mMNdH56bpD7SrT9+gGKKMa0eicKAii
+        TLNtkcV0JEMHbZLywVX1B5TRjujJkSfKtly9R9sk7HoluRL2+/wnhYXbStNPlG05S9IvJ9U7BbtxVyOg
+        lHZEf+eqAgzcyISpeySgXLvb3C+zmoPFLAGj/J1cCTrQ7BMhqiuNHSjXBnOKn+0/jMsBFNMuFifrEoIk
+        W0OuLoANrk119/0v1oLCpXzmqgIEmSpydQEwhvocn6vaLySlS8lVBUgyNeTqAiSZUnJV+4WkdCm5qgBJ
+        poZcXYAkU8rdZVfHMMrnowUWri3PStKP4Sy2aPpsJObAaKc03WOyXI+k5x4Wi8/9/hoElFOdIzBPyiCU
+        pe3ObbGrsjAGMf2IbkuDmJy97MYobIjSX3qb4/vM6Z3l0e7EvbCbtTqlfJTWUZsDDVOgtTIEBVbxHAHl
+        FmcUgVzXZFXNA4sMb3UOQ/8Iu32wp0a4MUmJUtKofJgbUVSODtR8aiSS6lxqEzLkxqxmzBvao99Msd1a
+        QYVLv1tSStqqXxw9vC+25eelq//oDxkafJYHZRRjdb/6wP7VomPeYdCvcyNzBM8KGlFSHeaktjJ1ou15
+        s1kDlhkGD1CMMElhpUCdAnKWMamI3Cb9GPOqW+EBanJwhnbJ46y7MmrUoGNI6dWgRjKgVUyyYFYwJhlw
+        +zUMhNRnA2szgl0A/RbvHv4FYY4UjL+suTOeMdrvCWSj4KbWGC9LL4D7e5sNuVycNfTOuK/+piDqOxRo
+        8n0aIbOHNLhHhrBaxfckvcOsYXCPBrRmtvxetOKitsM+5nwg7p2LIVLOGobT9Sqj0IQYZglXIgqtUDQG
+        T+FTdE2lfJZctMYo4AON5Kq9IskYrMyeg7U1xQUm94Mkv8YXMkhN+jb3rwSS7CVwEkNRVjPQX+nB0hE9
+        +QYJZZdsjJEToyAuFH3CRHGEOlO8ucAooNH0VGRoZ0Pqg9R9oZwSG1F+jvRQyR7NZHZAEfMd2VMl9QV3
+        SwDKS0LCx+huco0SzQ5cu6uasvbEcziO4MfqgAouKaPKZZ8f90fDxf7xgji7ot8MaNTyrPvc2P7TIA/m
+        85SC++ZAwyYHNWfK9v/extsDVsea58TF3W+Hw+FwOBwOh8PhcDgcDofD4XCcP66u/gfuhGqED4LzoQAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox14.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAZ8SURBVHhe7VvbVeQ4FCSE+eTxQwibAYQwGexmMGQwZLCT
+        AWQwZAAZLBnQGSwZMFWmZCT5djc09pXovnVODbae1VeWrLI9Ry8vL8GOaCYG29FMDLajmRhsx8AHcH5+
+        /u34+PgC/AnegPcnJyf/4e+LReXdgyzLOhdsQ80FdgGCeM5gbgr8R6m2OEDn6iawDWdnZ38hYLy6zaDO
+        yHv2pW4DFhAkXr1W8JbkT3UfyIHl5MoIlhf/kYxAAoLyVAXJk0+SEUhAUFZVkDy5koxAQixZHQKBua4C
+        5cFrdR+woG3vQxW02YkZeRfb3g2QaRsNG4/Ba6Q/piB+lmqLs7Doh33rNJCQggbycUfhpPXo5BJkMG/B
+        h00DpTzOMpZlncv60QnSOODsa6ij5EBCCkxGPq/6gb+zPeZgW2pz8iRARQIJdYByIoj/g79xTCf/N8gH
+        jReqOkHKV1k+D/vNNnBstk+qaiDBCpInJSOQYAXJk5IRSEBQwqn3BKzxzZw6+5aMQA4EJ5x6b0CA6DcW
+        d+og+7hUt4EaWDYKp87HGkj7Bc7q1NkmjsOpb0MWuHDqPSAFJmM49ZaoA5QTQQyn7g0rSJ6UjECCFSRP
+        SkYgAUEJp94TsMaHU+8NCE449d6AAPXn1GWEuG3jNo/mZe+/9tZv6MepMwM82K+9M91tnbo+ezn4r70t
+        vQisr1PHAa/eIsOBXX7tbegciSAu79RRID6dzGBodCUFxNfeGQyNrqSAcKYZqKnS6MlVLFkVWsaDfQ8i
+        cBLONAO1VVo9WMZD297FnSmugi/xtTe0tnHqCFDhTHkMHuzX3nU83J16VrCtM+0ESZc0+scjHWQ86HfI
+        tT7QNx51Qk5UOrh3yJbGRJd4WImelPZuYGn0ZAxIBUujJykgnHoGaqo0erKtU2ffikM36CIeOOGWzCy0
+        IMOplyzjgYT+3iE3BDVKq/Ub5mQZD0yTvt4hG5Ah4/aR202aqMXe7auuezzUT79OXeXc3+1n5V3iwYFA
+        +ls80kHGpk5dAiflFqD5br8uB900grO+JtBs6N+p45z9mOUWZPFuP0t/Bm9PT0+/K2tnsA32A3IANr6h
+        3TggHpTmpttNcJwBOOZAXL/3nvMeaKnjksW2rf5HdjMgOO7i3f6cA1GDbePC483c0jCQgejCqfO4ynMj
+        gvQoGWuhe1tahicbDaYxj2Wse1MOtWX93n6ceisd6Pdx3axAPjcj/+LvLrP3SXXNzZFmy11V59Uc8qDK
+        8ODEqTOtKrM0H6zBYBryxq3oDLzZMOjcEvPC+KWkVyCxC6eu6eyh41ZdFuCOCMHZuDPchWxz3Y6tWOJQ
+        sIkz5TH71ulEB4/B2d/tg1wazWUE6XPOinW8UXc28oJgIVRT18Wpp3PlfUoHSA0sw4vA1JGDeSjLG7LV
+        1uxkX2v1GBWaOPU6HVxEhw4LeA5GIvtU9yWswomo5ObUrbzEGXVYGwmPZcokNJU3csIq6EnJ8NCxqpcJ
+        PdKwyrpxcqO3CnlSMhbXgauxeDup+8bsu6mPkhqKCwWJh+DUn+vZgbRh/98J37bgvHKMAi7Mr9oldaDt
+        Yq1GGnd6ZtmGfNtw4MTbIZNuTr1+tsQBssq1ZH3RMBhdOHXmqYxVdxdOPjVCWssny+v4+sQZI9OlU59L
+        B+rfqckBbNcq1wOHmZwl7I1TTzrwlxdBMRtx3mJ5fheh9yoPROLeOnUCbdaPvLshtVmBGIkCX9Kpa1m6
+        QJ0fShqBtMnLpV5IbRsD4UHFaTEdan6EVaYnxoB0Rgrca6eu5kdYZXoi19S9dupqfoRVpicmkS22gi5O
+        fdjbZ8DAf8rXLElqk8whGPvq1Iu+8KP73vbin7126mAxE3le5XdD/NbCGB6EU5dHMeu15rC8Ghl77dQJ
+        tNlyZ7mOrztOI2MkAvLlnLpm05CPOhxQ1ikGFen9Pn63Mj05iACsvBlZfBSH835fUBkZrhxEAFbenDTu
+        ZbwXmWW9Oc4OAgmH8E6dP3rykQPSt/5/DQeW7/sp1CjkwjxIS+tA++XXHUCXnwERyGixN3f/+h2DMvkw
+        DenNli5LzwgU2FenXnPSNwLTwr2bX99P4OXUt2FBHcW9hOBShnS3QWFf9fL5LujGN6tT3wVeOlTebHMu
+        Qtv6ZSowhW70S+y+ns0beGA7NCNnmy2cFXOsFAcPBJPP4Hjv28UjrVR39mdxAUCbjCvwDpzcv5imvKvh
+        qe1OODr6A0iJc90md1wlAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAABslJREFUeF7t
+        XO1x3DgMdQn30x9/toTrICnhOrA7SDqwO7jrwO7g0kHcQdKB3cG5g9yDBmKWFCSRBERqd/Fm3nhEQSRE
+        kABIynvlcDgcDofD4XA4HA6Hw2GD6+vrT+Aj+H3kzc3Nf8TD4fAHizm2AnUyOvsLd/6vFT7xYw5rkCHQ
+        wY808pNOX+IbP+6wBM8IqcNz+MjVOLRg9/Sv0Mm1JDd377GlAuyi3o4604zs9h64KccaeGb8SDvSmmjj
+        b27SsQR0Vk4GZUXPxJaAUftV6LRNeXt7+xc37zgGu6qStNaKl5Uec4C+B5/BcUX96+7u7k8WGYCyJyrv
+        xCjI4/pAMQZ/g75H/MxipwUofr8QnN9ZLKDT7BhIerIaA3gQibLgC4udBsgnQ+m1lDV6KX5GkmvJA6sz
+        AEb6KciMjGR3CR5V5JakF4iYBlK8/D+SXGNGbmtNJ5pVIC1c7/mR/aBi7RD5YVy/JvebkwzA6gwonLVv
+        aUzshgpjEFP30C1+HPGV1RmA68/J/UXSO+zCKFAmy00dkx8NkGQ6UGUQIhmFBihX0R5QolhpIj8eIMn0
+        IKszANeH9H4m+2VhFa5qID8eIMn0IKsTIMlksn0WRv5SUCSLXEWAJNOB0dpI835g+91kzA5NqhplWahr
+        KedvRXUMGYn3+cbVtEOtuyIK65BvklxjRr4f19UGAdvvjwlKZJNmF1czANfNd3lTkg6szgCUqfbWuJp2
+        kJTIJc0urmYAymozGktGgRjXqsVq8/RXUqKEXE0Ayrqt1sllshoBklwJmy8SJSVyKXUAyiw/aCgi2p4c
+        56L8PZUrIVfTDmhUo3B6/vCQ3O/BNPNTbXhyNe1Ao1xSJJO731zEtSbRiFLoJkCj1aM6DXgo2+STn0Ka
+        rUPA9h9PUKcKimRRMIjKXxvRah3y0WWDUXnKt0eXZbYOSRe+TYAXqF6pg9GUVvprE6ZpKso0g6RLDJEU
+        ySIMEKW9KOu6MIQ+P1mVAJSpDs24mnZAoyq/L8SRnp8BpS5Um4a3nyE0ygVFSjjJRFBGHdEswNPMkPw9
+        7qk+Z0W9UQrdBGhYNYrYJUwOclDWcpEYzQyCMlkZOam3CWiECcpkE8//SF2X8mCoiNxkALXNA0WUz2R7
+        dzWC1yIq309G4eoCUP6Rym3AdCFIn49qjfHUZQ1yDIsRLaScL6mMNdH56bpD7SrT9+gGKKMa0eicKAii
+        TLNtkcV0JEMHbZLywVX1B5TRjujJkSfKtly9R9sk7HoluRL2+/wnhYXbStNPlG05S9IvJ9U7BbtxVyOg
+        lHZEf+eqAgzcyISpeySgXLvb3C+zmoPFLAGj/J1cCTrQ7BMhqiuNHSjXBnOKn+0/jMsBFNMuFifrEoIk
+        W0OuLoANrk119/0v1oLCpXzmqgIEmSpydQEwhvocn6vaLySlS8lVBUgyNeTqAiSZUnJV+4WkdCm5qgBJ
+        poZcXYAkU8rdZVfHMMrnowUWri3PStKP4Sy2aPpsJObAaKc03WOyXI+k5x4Wi8/9/hoElFOdIzBPyiCU
+        pe3ObbGrsjAGMf2IbkuDmJy97MYobIjSX3qb4/vM6Z3l0e7EvbCbtTqlfJTWUZsDDVOgtTIEBVbxHAHl
+        FmcUgVzXZFXNA4sMb3UOQ/8Iu32wp0a4MUmJUtKofJgbUVSODtR8aiSS6lxqEzLkxqxmzBvao99Msd1a
+        QYVLv1tSStqqXxw9vC+25eelq//oDxkafJYHZRRjdb/6wP7VomPeYdCvcyNzBM8KGlFSHeaktjJ1ou15
+        s1kDlhkGD1CMMElhpUCdAnKWMamI3Cb9GPOqW+EBanJwhnbJ46y7MmrUoGNI6dWgRjKgVUyyYFYwJhlw
+        +zUMhNRnA2szgl0A/RbvHv4FYY4UjL+suTOeMdrvCWSj4KbWGC9LL4D7e5sNuVycNfTOuK/+piDqOxRo
+        8n0aIbOHNLhHhrBaxfckvcOsYXCPBrRmtvxetOKitsM+5nwg7p2LIVLOGobT9Sqj0IQYZglXIgqtUDQG
+        T+FTdE2lfJZctMYo4AON5Kq9IskYrMyeg7U1xQUm94Mkv8YXMkhN+jb3rwSS7CVwEkNRVjPQX+nB0hE9
+        +QYJZZdsjJEToyAuFH3CRHGEOlO8ucAooNH0VGRoZ0Pqg9R9oZwSG1F+jvRQyR7NZHZAEfMd2VMl9QV3
+        SwDKS0LCx+huco0SzQ5cu6uasvbEcziO4MfqgAouKaPKZZ8f90fDxf7xgji7ot8MaNTyrPvc2P7TIA/m
+        85SC++ZAwyYHNWfK9v/extsDVsea58TF3W+Hw+FwOBwOh8PhcDgcDofD4XCcP66u/gfuhGqED4LzoQAA
+        AABJRU5ErkJggg==
+</value>
+  </data>
 </root>
