add admin login

--- a/Dashboard.resx
+++ b/Dashboard.resx
@@ -165,32 +165,32 @@
   </data>
   <data name="pictureBox12.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAV/SURBVHhe7Z1Na5xlFIb7A/xCXCSTzBhiMJKNWnFhQYsI
-        arUorkR/gfgbXAtaN4IUXRTpWkQU/NiJIrZCF/UjCAriQnGhFb+34/1M7sAzZ85M7vOGzPPSngsukjnv
-        c87c855k2mTRHhuPx2mPdItpO91i2k63mLbTLabtdItpO91i2k63mLbTLabtdItpO91i2k63mLbTLabt
-        dItpO4+E1dXVB1ZWVt6EX+LzK/g4vlrE6/kPvrW2tnaaL7e/DAaDJxD6a/sirlaxmE9Ho9EmX35/2N7e
-        vh4B37WBrwX5HfMcb0V7Njc3b0Sg77yw15J4dzjLW9IWhHnPhitiSR8i5NNwxKNLxcsUkWNmwOt5GNfd
-        1wyf57E2INwzTqiv4AaPNMNkCssxc8FrfxLn/rV9rb4AJzhvVbsbGxs38XJTTK6wHLMQ/E3rPpydWgru
-        yXleXi548lN1ENr8O2MfJ1tIjjkQfEc8a3ubfFHiic/VIRCsH3+okTpbFzlGAt8Vl+ve8lbOS8sDTzz1
-        8wZCnOClXlBn6yLHSGAhL9S9ePw6Ly0PPOnUT+Dr6+s381IvqLN1kWMkcP4x0/8+Ly0PEyD0ApaBzReV
-        YyTwxXm87sXjS7y0POoARZZ7g80XlWMk8Letu+peLOQyLy2POkCR5d5g80XlGIlciIDNF5VjJHIhAjZf
-        VI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5Vj
-        JHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlc
-        iIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg
-        80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxR
-        OUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6RyIUI2HxROUYiFyJg80XlGIlciIDNF5VjJHIhAjZfVI6R
-        yIUI2HxROUYiFyJg80XlGIkjXwiGnsTQV+ElfP5n/WTzZGtv8DJG5BgJu5B54n7+jo8X4Ev4/B62zwcH
-        d7gEd+AiOaI3eBkjcoyEuhAr7vVHg8FgyDHT4MLdOPSHbVLlmN7gZYzIMRJdF0J/wb2/g6P2wKZuhb86
-        h2U5qjd4GSNyjMQhF1L8eTgcDjhuspDPnEO7eKIHeWQGe57l3mDzReUYCW8hvDQD7vVTuP6DPV/evvYP
-        PGIv4lvozOTiAmwPy73B5ovKMRKRheyD+/6G7YEnZy7g8QfsWUjdU2S5N9h8UTlGostCCjj3sel7rSzk
-        27qIx/fz/ELqniLLvcHmi8oxEl0Xgr6HTN83JfjfdXFnZ+c6nl9I3VNkuTfYfFE5RqLrQra2tm4wfX+V
-        4P/URZ49kLon0rcsbL6oHCPRdSHlHw6te/DudKUEn/oTH8XjPL+QuqfIcm+w+aJyjETXheBeP2r6LpTi
-        +bqIx+/w/ELqniLLvcHmi8oxEodYyCd1Dx6/WIY9Xhfpy+yZi+1huTfYfFE5RsIuBDf2wF8u4keLs3UP
-        +/benfDgc3sR7sJTkwMO5mwupOpdtBCcPY0z39fn2fM2j0y2NULhN3soXZo/Yge3cB17YHN3YimH+n1W
-        Ghf3/KfhcHgb1zANlnI7Dl20TenRiGWUX78f/B/A4NAJ+AqavoCdfyWfzlju5UXc2zP4eC9v9zTef26Y
-        ttMtpu10i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpq0cH/sfwA9/PtsN
-        hYgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAABX9JREFUeF7tnU1rnGUUhvsD/EJcJJPMGGIwko1acWFBiwhqtSiuRH+B+BtcC1o3
+        ghRdFOlaRBT82IkitkIX9SMICuJCcaEVv7fj/UzuwDNnzkzu84bM89KeCy6SOe9zztzznmTaZNEeG4/H
+        aY90i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpu10i2k73WLaTreYttMtpu10i2k7j4TV1dUHVlZW
+        3oRf4vMr+Di+WsTr+Q++tba2dpovt78MBoMnEPpr+yKuVrGYT0ej0SZffn/Y3t6+HgHftYGvBfkd8xxv
+        RXs2NzdvRKDvvLDXknh3OMtb0haEec+GK2JJHyLk03DEo0vFyxSRY2bA63kY193XDJ/nsTYg3DNOqK/g
+        Bo80w2QKyzFzwWt/Euf+tX2tvgAnOG9VuxsbGzfxclNMrrAcsxD8Tes+nJ1aCu7JeV5eLnjyU3UQ2vw7
+        Yx8nW0iOORB8Rzxre5t8UeKJz9UhEKwff6iROlsXOUYC3xWX697yVs5LywNPPPXzBkKc4KVeUGfrIsdI
+        YCEv1L14/DovLQ886dRP4Ovr6zfzUi+os3WRYyRw/jHT/z4vLQ8TIPQCloHNF5VjJPDFebzuxeNLvLQ8
+        6gBFlnuDzReVYyTwt6276l4s5DIvLY86QJHl3mDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIX
+        ImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjY
+        fFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9U
+        jpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMk
+        ciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyI
+        gM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDzReUYiVyIgM0XlWMkciECNl9UjpHIhQjYfFE5RiIXImDz
+        ReUYiSNfCIaexNBX4SV8/mf9ZPNka2/wMkbkGAm7kHnifv6OjxfgS/j8HrbPBwd3uAR34CI5ojd4GSNy
+        jIS6ECvu9UeDwWDIMdPgwt049IdtUuWY3uBljMgxEl0XQn/Bvb+Do/bApm6FvzqHZTmqN3gZI3KMxCEX
+        Uvx5OBwOOG6ykM+cQ7t4ogd5ZAZ7nuXeYPNF5RgJbyG8NAPu9VO4/oM9X96+9g88Yi/iW+jM5OICbA/L
+        vcHmi8oxEpGF7IP7/obtgSdnLuDxB+xZSN1TZLk32HxROUaiy0IKOPex6XutLOTbuojH9/P8QuqeIsu9
+        weaLyjESXReCvodM3zcl+N91cWdn5zqeX0jdU2S5N9h8UTlGoutCtra2bjB9f5Xg/9RFnj2QuifStyxs
+        vqgcI9F1IeUfDq178O50pQSf+hMfxeM8v5C6p8hyb7D5onKMRNeF4F4/avoulOL5uojH7/D8QuqeIsu9
+        weaLyjESh1jIJ3UPHr9Yhj1eF+nL7JmL7WG5N9h8UTlGwi4EN/bAXy7iR4uzdQ/79t6d8OBzexHuwlOT
+        Aw7mbC6k6l20EJw9jTPf1+fZ8zaPTLY1QuE3eyhdmj9iB7dwHXtgc3diKYf6fVYaF/f8p+FweBvXMA2W
+        cjsOXbRN6dGIZZRfvx/8H8Dg0An4Cpq+gJ1/JZ/OWO7lRdzbM/h4L2/3NN5/bpi20y2m7XSLaTvdYtpO
+        t5i20y2m7XSLaTvdYtpOt5i20y2m7XSLaTvdYtpOt5i20y2mrRwf+x/AD38+2w2FiAAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="pictureBox13.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -258,36 +258,36 @@
   </data>
   <data name="pictureBox14.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAZ8SURBVHhe7VvbVeQ4FCSE+eTxQwibAYQwGexmMGQwZLCT
-        AWQwZAAZLBnQGSwZMFWmZCT5djc09pXovnVODbae1VeWrLI9Ry8vL8GOaCYG29FMDLajmRhsx8AHcH5+
-        /u34+PgC/AnegPcnJyf/4e+LReXdgyzLOhdsQ80FdgGCeM5gbgr8R6m2OEDn6iawDWdnZ38hYLy6zaDO
-        yHv2pW4DFhAkXr1W8JbkT3UfyIHl5MoIlhf/kYxAAoLyVAXJk0+SEUhAUFZVkDy5koxAQixZHQKBua4C
-        5cFrdR+woG3vQxW02YkZeRfb3g2QaRsNG4/Ba6Q/piB+lmqLs7Doh33rNJCQggbycUfhpPXo5BJkMG/B
-        h00DpTzOMpZlncv60QnSOODsa6ij5EBCCkxGPq/6gb+zPeZgW2pz8iRARQIJdYByIoj/g79xTCf/N8gH
-        jReqOkHKV1k+D/vNNnBstk+qaiDBCpInJSOQYAXJk5IRSEBQwqn3BKzxzZw6+5aMQA4EJ5x6b0CA6DcW
-        d+og+7hUt4EaWDYKp87HGkj7Bc7q1NkmjsOpb0MWuHDqPSAFJmM49ZaoA5QTQQyn7g0rSJ6UjECCFSRP
-        SkYgAUEJp94TsMaHU+8NCE449d6AAPXn1GWEuG3jNo/mZe+/9tZv6MepMwM82K+9M91tnbo+ezn4r70t
-        vQisr1PHAa/eIsOBXX7tbegciSAu79RRID6dzGBodCUFxNfeGQyNrqSAcKYZqKnS6MlVLFkVWsaDfQ8i
-        cBLONAO1VVo9WMZD297FnSmugi/xtTe0tnHqCFDhTHkMHuzX3nU83J16VrCtM+0ESZc0+scjHWQ86HfI
-        tT7QNx51Qk5UOrh3yJbGRJd4WImelPZuYGn0ZAxIBUujJykgnHoGaqo0erKtU2ffikM36CIeOOGWzCy0
-        IMOplyzjgYT+3iE3BDVKq/Ub5mQZD0yTvt4hG5Ah4/aR202aqMXe7auuezzUT79OXeXc3+1n5V3iwYFA
-        +ls80kHGpk5dAiflFqD5br8uB900grO+JtBs6N+p45z9mOUWZPFuP0t/Bm9PT0+/K2tnsA32A3IANr6h
-        3TggHpTmpttNcJwBOOZAXL/3nvMeaKnjksW2rf5HdjMgOO7i3f6cA1GDbePC483c0jCQgejCqfO4ynMj
-        gvQoGWuhe1tahicbDaYxj2Wse1MOtWX93n6ceisd6Pdx3axAPjcj/+LvLrP3SXXNzZFmy11V59Uc8qDK
-        8ODEqTOtKrM0H6zBYBryxq3oDLzZMOjcEvPC+KWkVyCxC6eu6eyh41ZdFuCOCMHZuDPchWxz3Y6tWOJQ
-        sIkz5TH71ulEB4/B2d/tg1wazWUE6XPOinW8UXc28oJgIVRT18Wpp3PlfUoHSA0sw4vA1JGDeSjLG7LV
-        1uxkX2v1GBWaOPU6HVxEhw4LeA5GIvtU9yWswomo5ObUrbzEGXVYGwmPZcokNJU3csIq6EnJ8NCxqpcJ
-        PdKwyrpxcqO3CnlSMhbXgauxeDup+8bsu6mPkhqKCwWJh+DUn+vZgbRh/98J37bgvHKMAi7Mr9oldaDt
-        Yq1GGnd6ZtmGfNtw4MTbIZNuTr1+tsQBssq1ZH3RMBhdOHXmqYxVdxdOPjVCWssny+v4+sQZI9OlU59L
-        B+rfqckBbNcq1wOHmZwl7I1TTzrwlxdBMRtx3mJ5fheh9yoPROLeOnUCbdaPvLshtVmBGIkCX9Kpa1m6
-        QJ0fShqBtMnLpV5IbRsD4UHFaTEdan6EVaYnxoB0Rgrca6eu5kdYZXoi19S9dupqfoRVpicmkS22gi5O
-        fdjbZ8DAf8rXLElqk8whGPvq1Iu+8KP73vbin7126mAxE3le5XdD/NbCGB6EU5dHMeu15rC8Ghl77dQJ
-        tNlyZ7mOrztOI2MkAvLlnLpm05CPOhxQ1ikGFen9Pn63Mj05iACsvBlZfBSH835fUBkZrhxEAFbenDTu
-        ZbwXmWW9Oc4OAgmH8E6dP3rykQPSt/5/DQeW7/sp1CjkwjxIS+tA++XXHUCXnwERyGixN3f/+h2DMvkw
-        DenNli5LzwgU2FenXnPSNwLTwr2bX99P4OXUt2FBHcW9hOBShnS3QWFf9fL5LujGN6tT3wVeOlTebHMu
-        Qtv6ZSowhW70S+y+ns0beGA7NCNnmy2cFXOsFAcPBJPP4Hjv28UjrVR39mdxAUCbjCvwDpzcv5imvKvh
-        qe1OODr6A0iJc90md1wlAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAABnxJREFUeF7tW9tV5DgUJIT55PFDCJsBhDAZ7GYwZDBksJMBZDBkABksGdAZLBkw
+        VaZkJPl2NzT2lei+dU4Ntp7VV5assj1HLy8vwY5oJgbb0UwMtqOZGGzHwAdwfn7+7fj4+AL8Cd6A9ycn
+        J//h74tF5d2DLMs6F2xDzQV2AYJ4zmBuCvxHqbY4QOfqJrANZ2dnfyFgvLrNoM7Ie/albgMWECRevVbw
+        luRPdR/IgeXkygiWF/+RjEACgvJUBcmTT5IRSEBQVlWQPLmSjEBCLFkdAoG5rgLlwWt1H7Cgbe9DFbTZ
+        iRl5F9veDZBpGw0bj8FrpD+mIH6WaouzsOiHfes0kJCCBvJxR+Gk9ejkEmQwb8GHTQOlPM4ylmWdy/rR
+        CdI44OxrqKPkQEIKTEY+r/qBv7M95mBbanPyJEBFAgl1gHIiiP+Dv3FMJ/83yAeNF6o6QcpXWT4P+802
+        cGy2T6pqIMEKkiclI5BgBcmTkhFIQFDCqfcErPHNnDr7loxADgQnnHpvQIDoNxZ36iD7uFS3gRpYNgqn
+        zscaSPsFzurU2SaOw6lvQxa4cOo9IAUmYzj1lqgDlBNBDKfuDStInpSMQIIVJE9KRiABQQmn3hOwxodT
+        7w0ITjj13oAA9efUZYS4beM2j+Zl77/21m/ox6kzAzzYr70z3W2duj57OfivvS29CKyvU8cBr94iw4Fd
+        fu1t6ByJIC7v1FEgPp3MYGh0JQXE194ZDI2upIBwphmoqdLoyVUsWRVaxoN9DyJwEs40A7VVWj1YxkPb
+        3sWdKa6CL/G1N7S2ceoIUOFMeQwe7NfedTzcnXpWsK0z7QRJlzT6xyMdZDzod8i1PtA3HnVCTlQ6uHfI
+        lsZEl3hYiZ6U9m5gafRkDEgFS6MnKSCcegZqqjR6sq1TZ9+KQzfoIh444ZbMLLQgw6mXLOOBhP7eITcE
+        NUqr9RvmZBkPTJO+3iEbkCHj9pHbTZqoxd7tq657PNRPv05d5dzf7WflXeLBgUD6WzzSQcamTl0CJ+UW
+        oPluvy4H3TSCs74m0Gzo36njnP2Y5RZk8W4/S38Gb09PT78ra2ewDfYDcgA2vqHdOCAelOam201wnAE4
+        5kBcv/ee8x5oqeOSxbat/kd2MyA47uLd/pwDUYNt48LjzdzSMJCB6MKp87jKcyOC9CgZa6F7W1qGJxsN
+        pjGPZax7Uw61Zf3efpx6Kx3o93HdrEA+NyP/4u8us/dJdc3NkWbLXVXn1RzyoMrw4MSpM60qszQfrMFg
+        GvLGregMvNkw6NwS88L4paRXILELp67p7KHjVl0W4I4Iwdm4M9yFbHPdjq1Y4lCwiTPlMfvW6UQHj8HZ
+        3+2DXBrNZQTpc86KdbxRdzbygmAhVFPXxamnc+V9SgdIDSzDi8DUkYN5KMsbstXW7GRfa/UYFZo49Tod
+        XESHDgt4DkYi+1T3JazCiajk5tStvMQZdVgbCY9lyiQ0lTdywiroScnw0LGqlwk90rDKunFyo7cKeVIy
+        FteBq7F4O6n7xuy7qY+SGooLBYmH4NSf69mBtGH/3wnftuC8cowCLsyv2iV1oO1irUYad3pm2YZ823Dg
+        xNshk25OvX62xAGyyrVkfdEwGF04deapjFV3F04+NUJayyfL6/j6xBkj06VTn0sH6t+pyQFs1yrXA4eZ
+        nCXsjVNPOvCXF0ExG3HeYnl+F6H3Kg9E4t46dQJt1o+8uyG1WYEYiQJf0qlrWbpAnR9KGoG0yculXkht
+        GwPhQcVpMR1qfoRVpifGgHRGCtxrp67mR1hleiLX1L126mp+hFWmJyaRLbaCLk592NtnwMB/ytcsSWqT
+        zCEY++rUi77wo/ve9uKfvXbqYDETeV7ld0P81sIYHoRTl0cx67XmsLwaGXvt1Am02XJnuY6vO04jYyQC
+        8uWcumbTkI86HFDWKQYV6f0+frcyPTmIAKy8GVl8FIfzfl9QGRmuHEQAVt6cNO5lvBeZZb05zg4CCYfw
+        Tp0/evKRA9K3/n8NB5bv+ynUKOTCPEhL60D75dcdQJefARHIaLE3d//6HYMy+TAN6c2WLkvPCBTYV6de
+        c9I3AtPCvZtf30/g5dS3YUEdxb2E4FKGdLdBYV/18vku6MY3q1PfBV46VN5scy5C2/plKjCFbvRL7L6e
+        zRt4YDs0I2ebLZwVc6wUBw8Ek8/geO/bxSOtVHf2Z3EBQJuMK/AOnNy/mKa8q+Gp7U44OvoDSIlz3SZ3
+        XCUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox7.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
